# flare

./: .gitignore  README.md  fltest  publish.sh  pyproject.toml  run_tests.sh
.github/workflows/: deploy.yml
beet_test/: beet.json
beet_test/src/: main.py
cli_test/: flare.json  main.py  main2.py  manual_test.py  test_regex.py  test_string.py
docs/: index.md  package.json  playground.md
docs/.vitepress/: config.mts
docs/guide/: beet.md  block.md  cli.md  config.md  control-flow.md  custom_events.md  debugging.md  events.md  execute.md  functions.md  index.md  internals.md  item.md  math.md  native-commands.md  nbt.md  regex.md  scores.md  selectors.md  string.md
examples/cli_test/: main.py
examples/worldedit/: flare.json  main.py
flare/: __init__.py  basesymbols.py  beet.py  block_list.py  block_states.py  cli.py  command_parser.py  compiler.py  context.py  control_flow.py  event.py  execute_modifiers.py  flaremath.py  flrand.py  math.py  nbt_schema.py  preprocessor.py  print.py  resourcepack.py  resources.py  setup_autoreload.py  types.py  utils.py  variables.py
flare/modules/: bolt_help.bolt  config.bolt  cwd.bolt  data_type.py  flare.py  nbt.py  score.py  utils.py
flare/validator/: __init__.py  core.py  matchers.py  parser.py  schema.py
flare/variables/: __init__.py  bigscore.py  block.py  builtins.py  complex.py  core.py  float32.py  float64.py  item.py  nbt.py  objective.py  regex.py  score.py  selector.py  storage.py  string.py
tests/: .gitignore  build_nbt_schema.py  docs_codegroups.py  expected_output.txt  scraper.py  test_flare.py
(+16 files in other folders)
